# chatroom

./: CMakeLists.txt  README.md  main.cpp  shared_install.sh  simple_install.sh  static_install.sh
cmake_use_cases/: README.md  shared_lib.txt  simple_program.txt  static_lib.txt  use_shared_libs.txt  use_static_libs.txt
doc/: doc.odt
include/: Chatroom.hpp  User.hpp
src/: Chatroom.cpp  Chatroom.hpp  Client.cpp  Client.hpp  Server.cpp  Server.hpp  User.cpp  User.hpp  main.cpp
